<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".UI.AddEmployee">

    <TextView
        android:id="@+id/add_employee_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:text="@string/add_new_employee"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/add_employee_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/name"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:layout_constraintTop_toBottomOf="@id/add_employee_tv"/>

    <EditText
        android:id="@+id/add_employee_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/surname"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:layout_constraintTop_toBottomOf="@id/add_employee_name"/>

    <EditText
        android:id="@+id/add_employee_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/add_employee_surname"/>

    <EditText
        android:id="@+id/add_employee_workplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/workplace"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:layout_constraintTop_toBottomOf="@id/add_employee_age"/>

    <EditText
        android:id="@+id/add_employee_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/salary"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/add_employee_workplace"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fab_done"
        android:layout_gravity="end"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/Theme.MaterialComponents" />
</androidx.constraintlayout.widget.ConstraintLayout>