...
        android:layout_margin="15dp"
        android:hint="@string/workplace"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        app:layout_constraintTop_toBottomOf="@id/update_employee_age"/>

    <EditText
        android:id="@+id/update_employee_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/salary"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/update_employee_workplace"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/update_employee_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fab_done"
        android:layout_gravity="end"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
